lib/fixtures/errors/4021.ts
/**
 * @hidden
 */
export const payload = {
  description:
    "Limit reached on key. Can apply to daily key limit or daily IP limit",
  url: "/v1/postcodes/UB69PR",
  query: {
    api_key: "<DAILY_LIMIT_NIL_KEY>",
  },
  headers: {},
  httpStatus: 402,
  body: {
    code: 4021,
    message:
      "Lookup Limit Reached. For more information see http://ideal-postcodes.co.uk/documentation/response-codes#4021",
  },
};
